# rust-argtiny

./: Cargo.toml  LICENSE-MIT  README.md
examples/: basic.rs
src/: args.rs  lib.rs  macro_types.rs  macros.rs  parser.rs
tests/: integration.rs  macros.rs
