[package]
name = "argparser"
version = "0.1.0"
edition = "2024"
description = "A simple argument parser library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/caio-lauro/rust-argparser"
readme = "README.md"
keywords = ["cli", "args", "argument", "parser"]
categories = ["command-line-interface"]

[[test]]
name = "integration_test"
path = "tests/integration.rs"

[dependencies]
